<resources>
    <string name="app_name">Ice Enberg</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>

    <string name="profile">Profile</string>
    <string name="language">Languages</string>
    <string name="sign_out">Disconnect</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="successInsert">Successful insertion</string>
    <string name="errorInsert">Error inserting data</string>
    <string name="successDelete">Successful removal</string>
    <string name="errorDelete">Error deleting data</string>

    <string name="empty">Empty fields</string>
    <string name="emptySpinner">Select a valid value in the spinner</string>

    //login
    <string name="main_login_title_and_btn_login">Sign in</string>
    <string name="main_login_hint_email">Email</string>
    <string name="main_login_hint_password">Password</string>
    <string name="main_login_ask_account">You do not have an account?</string>
    <string name="main_login_create_account">Create account</string>

    //alert login
    <string name="main_dialog_login_title">Failed to login</string>
    <string name="main_dialog_login_message">An error occurred while logging in</string>

    //register
    <string name="main_register_title_and_btn_register">Sign up</string>
    <string name="main_register_ask_account">Do you have an account?</string>

    //alert registar
    <string name="main_dialog_register_title">Error registering user</string>
    <string name="main_dialog_register_message">An error occurred while registering the user</string>
    <string name="main_dialog_register_message_characters">The password must be at least 6 characters</string>

    //perfil usuario
    <string name="main_form_profile_hint_name">Name</string>
    <string name="main_form_profile_hint_lastName">Last name</string>
    <string name="main_form_profile_hint_email">Email</string>
    <string name="main_form_profile_hint_password">Password</string>
    <string name="main_form_profile_hint_phone">Phone</string>
    <string name="main_toast_profile_update">Data updated correctly</string>

    //alert user
    <string name="main_dialog_user_update_title">Error updating data</string>
    <string name="main_dialog_user_update_message">An error occurred while trying to update the data</string>
    <string name="main_dialog_user_delete_title">Delete user</string>
    <string name="main_dialog_user_delete_message">Do you want to delete your user? \nThis action cannot be undone</string>

    <string name="total">Total: </string>

    //Idiomas
    <string name="main_language_title">Languages</string>
    <string name="main_select_language">Select language</string>

    <string-array name="options_language">
        <item>English</item>
        <item>Spanish</item>
        <item>Italian</item>
    </string-array>

    //Página principal administrador
    <string name="main_admin_title">Control Panel</string>
    <string name="main_admin_welcome">Administrator Tools</string>
    <string name="main_admin_services">Services</string>
    <string name="main_admin_maintenance">Maintenance</string>
    <string name="main_admin_installation">Installation</string>
    <string name="main_admin_revision">Revision</string>
    <string name="main_admin_location">Location</string>

    //Página Principal mantenimientos
    <string name="main_maintenance_title">Maintenance</string>

    //Página formulario mantenimientos
    <string name="main_form_maintenance_title">New Maintenance</string>
    <string name="main_form_maintenance_title_edit">Edit Maintenance</string>
    <string name="main_form_maintenance_hint_name">Maintenance name</string>
    <string name="main_form_maintenance_hint_cost">Maintenance cost</string>

    //alert dialog mantenimientos
    <string name="main_dialog_maintenance_delete_title">Remove Maintenance</string>
    <string name="main_dialog_maintenance_delete_message">Do you want to remove this maintenance?"</string>

    //Página Principal instalacion
    <string name="main_installation_title">Installation</string>

    //Página formulario instalacion
    <string name="main_form_installation_title">New installation</string>
    <string name="main_form_installation_title_edit">Edit installation</string>
    <string name="main_form_installation_hint_name">Installation name</string>
    <string name="main_form_installation_hint_cost">Installation cost</string>

    //alert dialog instalacion
    <string name="main_dialog_installation_delete_title">Remove Installation</string>
    <string name="main_dialog_installation_delete_message">Do you want to remove this installation?"</string>

    //Página Principal revisiones
    <string name="main_revision_title">Revisions</string>

    //Página formulario revisiones
    <string name="main_form_revision_title">New Revision</string>
    <string name="main_form_revision_title_edit">Edit Revision</string>
    <string name="main_form_revision_hint_name">Revision name</string>
    <string name="main_form_revision_hint_cost">Revision cost</string>

    //alert dialog instalacion
    <string name="main_dialog_revision_delete_title">Remove Revision</string>
    <string name="main_dialog_revision_delete_message">Do you want to remove this revision?"</string>

    //Página Principal localizaciones
    <string name="main_location_title">Location</string>

    //Página formulario localizaciones
    <string name="main_form_location_title">New location</string>
    <string name="main_form_location_title_edit">Edit location</string>
    <string name="main_form_location_hint_name">Location name</string>
    <string name="main_form_location_hint_percentage">Deductible percentage</string>
    <string name="main_form_location_error_percentage">The number must be between 1 and 100</string>

    //alert dialog locación
    <string name="main_dialog_location_delete_title">Remove Locations</string>
    <string name="main_dialog_location_delete_message">Do you want to remove this location?</string>

    //Página principal usuario
    <string name="main_user_title">Dashboard</string>
    <string name="main_user_services">My Services</string>
    <string name="main_user_maintenance">Maintenances</string>
    <string name="main_user_installation">Installations</string>
    <string name="main_user_revision">Revisions</string>
    <string name="main_user_equipment">Equipments</string>

    //Página formulario equipos
    <string name="main_form_equipments_title">New equipment</string>
    <string name="main_form_equipments_title_edit">Edit equipment</string>
    <string name="main_form_equipments_hint_name">Equipment name</string>
    <string name="main_form_equipments_hint_brand">Equipment brand</string>
    <string name="main_form_equipments_hint_model">Equipment model</string>
    <string name="main_form_equipments_hint_direction">Equipment direction</string>
    <string name="main_form_equipments_hint_location">Select an location</string>

    <string-array name="options_equipments">
        <item>Select an location</item>
    </string-array>

    //alert dialog equipo
    <string name="main_dialog_equipment_delete_title">Remove Equipment</string>
    <string name="main_dialog_equipment_delete_message">Do you want to remove this equipment?</string>


    //Página Principal servicios
    <string name="main_service_title">Service</string>

    //Página formulario servicios
    <string name="main_form_service_title">Service</string>
    <string name="main_form_service_equipment_name">Equipment</string>
    <string name="main_form_service_status">Status</string>
    <string name="main_form_service_status_process">In process</string>
    <string name="main_form_service_status_finish">Finished</string>

    //alert dialog mantenimientos
    <string name="main_dialog_service_delete_title">Remove Service</string>
    <string name="main_dialog_service_delete_message">Do you want to remove this Service?"</string>

    //Servicio revisión
    <string-array name="options_revision">
        <item>Select an revision</item>
    </string-array>

</resources>