<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.instalacion.FormInstalacionActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_form_instalaciones"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/main_form_installation_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/nombre_instalacion"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:hint="@string/main_form_installation_hint_name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/costo_instalacion"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:hint="@string/main_form_installation_hint_cost"
                    android:inputType="numberDecimal" />

                <LinearLayout
                    android:id="@+id/buttonsAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="70dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/primary"
                        android:text="@string/add"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/secondary"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/buttonsEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="70dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/btnEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/primary"
                        android:text="@string/edit"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnDelete"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/red"
                        android:text="@string/delete"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>