<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.profile.profileUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_profile_user"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            app:titleTextColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/profile"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/person"
                        app:tint="@color/primary" />

                    <EditText
                        android:id="@+id/nombre_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:ems="10"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:hint="@string/main_form_profile_hint_name"
                        android:inputType="text"/>

                    <EditText
                        android:id="@+id/apellido_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:ems="10"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:hint="@string/main_form_profile_hint_lastName"
                        android:inputType="text"/>

                    <EditText
                        android:id="@+id/email_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:ems="10"
                        android:editable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:hint="@string/main_form_profile_hint_email"
                        android:inputType="none"/>

                    <EditText
                        android:id="@+id/password_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:ems="10"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:hint="@string/main_form_profile_hint_password"
                        android:inputType="textPassword"/>

                    <EditText
                        android:id="@+id/telefono_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:ems="10"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:hint="@string/main_form_profile_hint_phone"
                        android:inputType="phone"/>

                    <LinearLayout
                        android:id="@+id/buttonsProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="70dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnSave"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/primary"
                            android:text="@string/save"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/btnDelete"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/red"
                            android:text="@string/delete"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>