<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.Servicios.FormServiceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_form_services"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/main_form_service_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/nombre_servicio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_form_service_title"
                        android:layout_marginTop="40dp"
                        android:textSize="20dp"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/nombre_equipo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_form_service_equipment_name"
                        android:layout_marginTop="40dp"
                        android:textSize="20dp"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/precio_servicio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:layout_marginTop="40dp"
                        android:textSize="20dp"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/estado_servicio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_form_service_status"
                        android:layout_marginTop="40dp"
                        android:textSize="20dp"
                        android:textAlignment="center"/>

                    <LinearLayout
                        android:id="@+id/buttonsDelete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="70dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnDelete"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/red"
                            android:text="@string/delete"
                            android:textColor="@color/white"
                            android:textSize="18sp"/>

                        <Button
                            android:id="@+id/btnCancel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/secondary"
                            android:text="@string/cancel"
                            android:textColor="@color/white"
                            android:textSize="18sp"/>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>