<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/primary"
tools:context=".auth.RegisterActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/main_register_title_and_btn_register"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_rounded_background">

        <LinearLayout
            android:id="@+id/googleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="30dp">


            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:gravity="center"
                android:textColor="@color/black"
                android:hint="@string/main_login_hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:gravity="center"
                android:textColor="@color/black"
                android:hint="@string/main_login_hint_password"
                android:inputType="textPassword" />

                <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_register_title_and_btn_register"
                android:textColor="@color/white"
                android:backgroundTint="@color/primary"
                android:layout_marginTop="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_register_ask_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingTop="35dp"/>

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_login_title_and_btn_login"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/primary"
                android:paddingTop="8dp"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
