<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.Instalaciones.InstallationServiceActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_service_instalation"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/main_form_installation_title"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">
                    
                    <Spinner
                        android:id="@+id/tipo_instalacion"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:textAlignment="center"/>
                    
                    <Spinner
                        android:id="@+id/equipo_instalacion"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:textAlignment="center"/>
                    
                    <TextView
                        android:id="@+id/precio_instalacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:layout_marginTop="40dp"
                        android:textSize="20dp"
                        android:textAlignment="center"/>
                    
                    <LinearLayout
                        android:id="@+id/buttonsAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="70dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnAdd"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/primary"
                            android:text="@string/add"
                            android:textColor="@color/white"
                            android:textSize="18sp"/>

                        <Button
                            android:id="@+id/btnCancel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/secondary"
                            android:text="@string/cancel"
                            android:textColor="@color/white"
                            android:textSize="18sp"/>

                    </LinearLayout>
                    
                </LinearLayout>
                
            </ScrollView>
            
        </LinearLayout>
        
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>